# PETs

./: README.md
freelance/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml
freelance/api/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
freelance/api/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py  0003_remove_user_first_name_remove_user_last_name.py  0004_alter_profile_birth_date.py  0005_alter_profile_birth_date.py  0006_profile_is_customer.py
freelance/api/services/: tasks.py
freelance/api/services/user_data/: info.json
freelance/authorization/: apps.py  urls.py  views.py
freelance/freelance/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
freelance/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
freelance/frontend/src/: App.vue  main.js
freelance/frontend/src/assets/: main.css
freelance/frontend/src/components/: TheWelcome.vue
freelance/frontend/src/containers/: CategoryFIlterContainer.vue  MainHeader.vue  ProfileContainer.vue  SkeletonContainer.vue  TaskContainer.vue  TaskFilterContainer.vue
freelance/frontend/src/router/: index.js
freelance/frontend/src/services/: api.js  (+1 more)
shared-music-play/: .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  utils.py
shared-music-play/api/: serializers.py  urls.py  views.py
shared-music-play/api/tests/: factories.py  tests.py
shared-music-play/deploy/serverless-app/: DockerfileFrontend  uwsgi.ini
shared-music-play/frontend/: package-lock.json  package.json
shared-music-play/frontend/src/: main.js
shared-music-play/shared_music_play/: asgi.py  settings.py  urls.py  wsgi.py
shared-music-play/web/: admin.py  models.py  urls.py
shared-music-play/web/migrations/: 0002_alter_banneduserroom_ban_type_and_more.py
shared-music-play/websockets/: consumers.py  routing.py
(+109 files in other folders)
